treewide: split the data mod into its own crate
The test cases written for data were really meant for validating a beer.json
at change submission time (e.g. PR), so move the data structs to that repo
instead.

metric-beer-data is now the authority for the format, any changes to the
format must also be made to the schema (i.e. structs) and the data
simulataneously.

NOTE: The old javascript version of metric-beer does not reference the structs,
just the data. That version will have to be updated manually if there is a
breaking change to the format.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ log = "0.4.17"
 wasm-logger = "0.2.0"
 chrono = "0.4.23"
 
+# TODO: Figure out ssh clones here, the regular url format likes to complain
+metric-beer-data = { git = "https://github.com/richteer/metric-beer-data" }
+
 [profile.release]
 lto = true
 opt-level = 'z'
